добавил линтинг scss, конфиг stylelint-standard, поддержка scss

--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -1,8 +1,7 @@
-$white: #ffffff;
-$black: #000000;
-$main-text: #8E80A9;
-$main-bg: #FCF8FE;
-
+$white: #fff;
+$black: #000;
+$main-text: #8e80a9;
+$main-bg: #fcf8fe;
 
 $font: "Sample", "Arial", sans-serif;
 
