--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,6 +1,7 @@
-@import "./src/sass/variables.scss";
-@import "./src/sass/mixins.scss";
-@import "./src/sass/fonts.scss";
-@import "./src/blocks/sprite-png/sprite-png.scss";
-@import "./src/sass/scaffolding.scss";
-@import "./src/blocks/sprite-svg/sprite-svg.scss";
+@import './src/sass/variables.scss';
+@import './src/sass/mixins.scss';
+@import './src/sass/fonts.scss';
+@import './src/blocks/sprite-svg/sprite-svg.scss';
+@import './src/blocks/sprite-png/sprite-png.scss';
+@import './src/blocks/sprite-png/sprite-png__demo.scss';
+@import './src/sass/scaffolding.scss';
