--- a/src/blocks/sprite-png/sprite-png__demo.scss
+++ b/src/blocks/sprite-png/sprite-png__demo.scss
@@ -1,3 +1,3 @@
-// Просто добавляем все классы для вывода спрайтов
+// Просто добавляем все селекторы для вывода спрайтов
 
 @include sprites($spritesheet-sprites);
