--- a/src/sass/fonts.scss
+++ b/src/sass/fonts.scss
@@ -4,7 +4,8 @@
   font-style: normal;
   font-display: swap;
 
-  src: url("../fonts/Sample.woff2") format("woff2"), url("../fonts/Sample.woff") format("woff");
+  src: url("../fonts/Sample.woff2") format("woff2"),
+       url("../fonts/Sample.woff") format("woff");
 }
 
 @font-face {
@@ -13,5 +14,6 @@
   font-style: normal;
   font-display: swap;
 
-  src: url("../fonts/Sample.woff2") format("woff2"), url("../fonts/Sample.woff") format("woff");
+  src: url("../fonts/Sample.woff2") format("woff2"),
+       url("../fonts/Sample.woff") format("woff");
 }
