--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,7 +1,16 @@
+/*!*
+ * ВНИМАНИЕ! Этот файл генерируется автоматически.
+ * Не пишите сюда ничего вручную, все такие правки будут потеряны.
+ * Читайте ./README.md для понимания.
+ */
+
 @import './src/sass/variables.scss';
 @import './src/sass/mixins.scss';
 @import './src/sass/fonts.scss';
 @import './src/blocks/sprite-svg/sprite-svg.scss';
 @import './src/blocks/sprite-png/sprite-png.scss';
 @import './src/blocks/sprite-png/sprite-png__demo.scss';
+@import './src/blocks/page-header/page-header.scss';
+@import './src/blocks/page-footer/page-footer.scss';
+@import './src/blocks/object-fit-polyfill/object-fit-polyfill.scss';
 @import './src/sass/scaffolding.scss';
