--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -3,7 +3,7 @@ $black: #000;
 $main-text: #8e80a9;
 $main-bg: #fcf8fe;
 
-$font: "Sample", "Arial", sans-serif;
+$font: "Sample", -apple-system, blinkmacsystemfont, "Roboto", "Ubuntu", "Droid Sans", "Helvetica Neue", "Arial", sans-serif !default;
 
 $mobile-indent: 35px; //используется для отступов (margin-bottom, padding слева и справа)
 $tablet-indent: 78px;
