продолжил разбираться с pug

--- a/src/sass/fonts.scss
+++ b/src/sass/fonts.scss
@@ -4,8 +4,7 @@
   font-style: normal;
   font-display: swap;
 
-  src: url("../fonts/Sample.woff2") format("woff2"),
-       url("../fonts/Sample.woff") format("woff");
+  src: url("../fonts/Sample.woff2") format("woff2"), url("../fonts/Sample.woff") format("woff");
 }
 
 @font-face {
@@ -14,6 +13,5 @@
   font-style: normal;
   font-display: swap;
 
-  src: url("../fonts/Sample.woff2") format("woff2"),
-       url("../fonts/Sample.woff") format("woff");
+  src: url("../fonts/Sample.woff2") format("woff2"), url("../fonts/Sample.woff") format("woff");
 }
