борюсь с кодировкой в конце строк

--- a/src/pug/layout.pug
+++ b/src/pug/layout.pug
@@ -7,8 +7,12 @@ html(class='no-js', lang='ru')
   head
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1')
-    //- Edge и ряд мобильных браузеров автоматом преобразуют телефоны в ссылки. Отключим это.
+    //- Edge и ряд мобильных браузеров автоматом преобразуют данные вещи в ссылки. Отключим это.
     meta(name='format-detection', content='telephone=no')
+    meta(name='format-detection', content='date=no')
+    meta(name='format-detection', content='address=no')
+    meta(name='format-detection', content='email=no')
+    meta(content='notranslate', name='google')
 
     block meta
       title Home
@@ -17,6 +21,7 @@ html(class='no-js', lang='ru')
       link(rel='stylesheet', href='css/style.min.css')
 
   body
+    noscript JavaScript по какой-то причине отключен. Правильная работа сайта не гарантирована.
 
     block header
       p шапка
