--- a/src/pug/layout.pug
+++ b/src/pug/layout.pug
@@ -7,7 +7,7 @@ html(class='no-js', lang='ru')
   head
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1')
-    //- Edge и ряд мобильных браузеров автоматом преобразуют данный контент в ссылки. Отключим это.
+    //- Edge и ряд мобильных браузеров автоматом преобразуют данный контент в ссылки.
     meta(name='format-detection', content='telephone=no')
     meta(name='format-detection', content='date=no')
     meta(name='format-detection', content='address=no')
