поправил object-polyfill

--- a/src/pug/layout.pug
+++ b/src/pug/layout.pug
@@ -1,4 +1,4 @@
-//- Стандартный шаблон страницы
+//- Стандартный шаблон
 
 include mixins.pug
 
@@ -7,7 +7,6 @@ html(class='no-js', lang='ru')
   head
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1')
-    //- Edge и ряд мобильных браузеров автоматом преобразуют данный контент в ссылки.
     meta(name='format-detection', content='telephone=no')
     meta(name='format-detection', content='date=no')
     meta(name='format-detection', content='address=no')
@@ -21,7 +20,6 @@ html(class='no-js', lang='ru')
       link(rel='stylesheet', href='css/style.min.css')
 
   body
-    noscript JavaScript по какой-то причине отключен. Правильная работа сайта не гарантирована.
 
     block header
       p шапка
