добавил компиляцию pug,sass

--- a/src/pug/layout.pug
+++ b/src/pug/layout.pug
@@ -27,12 +27,12 @@ html(class='no-js', lang='ru')
       title Home
 
     block head
-      link(rel='stylesheet', href='css/style.min.css')
+      link(rel='stylesheet', href='css/style.css')
 
   body
 
     block header
-      p шапка
+      p.nothing шапка
     block content
       p содержимое
     block footer
