--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -5,7 +5,7 @@ $main-bg: #fcf8fe;
 
 $font: "Sample", -apple-system, blinkmacsystemfont, "Roboto", "Ubuntu", "Droid Sans", "Helvetica Neue", "Arial", sans-serif !default;
 
-$mobile-indent: 35px; //используется для отступов (margin-bottom, padding слева и справа)
+$mobile-indent: 35px;
 $tablet-indent: 78px;
 $desktop-indent: 275px;
 
