добавил таски js,sprite-png,sprite-svg

--- a/src/pug/layout.pug
+++ b/src/pug/layout.pug
@@ -39,4 +39,4 @@ html(class='no-js', lang='ru')
       p подвал
 
     block page-bottom
-      script(src='js/script.min.js')
+      script(src='js/bundle.js')
