--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -9,6 +9,8 @@
 @import "./src/sass/fonts.scss";
 @import "./src/blocks/page-header/page-header.scss";
 @import "./src/blocks/page-footer/page-footer.scss";
+@import "./src/blocks/sprite-svg/sprite-svg.scss";
+@import "./src/blocks/sprite-png/sprite-png.scss";
 @import "./src/sass/scaffolding.scss";
 
 /* !*
