доработал тесты в package.json

--- a/src/blocks/object-fit-polyfill/object-fit-polyfill.scss
+++ b/src/blocks/object-fit-polyfill/object-fit-polyfill.scss
@@ -1,8 +1,5 @@
-// Никакая стилизация этого Блока по умолчанию не нужна.
-//
-// Полифил ВКЛЮЧАЕТСЯ в js-файле этого блока.
-// Добавочная стилизация для картинок с указанным object-fit: cover; добавится
-// с помощью PostCSS-плагина на этапе постобработки css-файла(ов).
-//
-// Полифил:                    https://github.com/bfred-it/object-fit-images
-// Добавленный PostCSS-плагин: https://github.com/ronik-design/postcss-object-fit-images
+// Демка для библиотеки блоков
+
+img.ofp-demo {
+  object-fit: cover;
+}
