--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -20,5 +20,5 @@ block footer
     p «Подвал»
     p Контактный телефон: #[a(href='tel:+70000000000') +7 000 000 00 00]
 
-//- block page-bottom
+//- block append page-bottom
 //-   script(src='js/some.js')
