--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -4,6 +4,8 @@ $main-text: #8e80a9;
 $main-bg: #fcf8fe;
 
 $font: "Sample", -apple-system, blinkmacsystemfont, "Roboto", "Ubuntu", "Droid Sans", "Helvetica Neue", "Arial", sans-serif !default;
+$font-size: 10px;
+$line-height: 150%;
 
 $mobile-indent: 35px;
 $tablet-indent: 78px;
