добавил radiobutton mixin

--- a/src/blocks/page-footer/page-footer.pug
+++ b/src/blocks/page-footer/page-footer.pug
@@ -17,5 +17,5 @@ mixin page-footer(mods)
       }
     }
 
-  footer.page-footer(class=allMods)&attributes(attributes)
+  footer.page-footer(class=allClasses)&attributes(attributes)
     block
