--- a/src/blocks/page-header/page-header.pug
+++ b/src/blocks/page-header/page-header.pug
@@ -17,5 +17,5 @@ mixin page-header(mods)
       }
     }
 
-  header.page-header(class=allMods)&attributes(attributes)
+  header.page-header(class=allClasses)&attributes(attributes)
     block
