--- a/src/blocks/site-list/site-list.pug
+++ b/src/blocks/site-list/site-list.pug
@@ -2,17 +2,26 @@
 //- Все примеси в этом файле должны начинаться c имени блока (site-list)
 //- Структура меню — в site-list.data.pug
 
-mixin site-list(selectedID)
+mixin site-list(classes,selectedID)
 
+  -
+    // список классов
+      let allClasses = '';
+      if(typeof(classes) !== 'undefined' && classes) {
+        for (let item of classes.split(',')) {
+          allClasses = allClasses + item.trim();
+        }
+      }
   //- Принимает:
+  //-   classes    {string} - список классов
   //-   selectedID {string} - id пункта меню (по умолчанию — из site-list.data.pug)
   //- Вызов:
-        +site-list('1')
+        +site-list('class 1', '1')
 
   //- подключаем файл со структурой данных блока
   include site-list.data.pug
 
-  ul(class='main-nav__list site-list')
+  ul(class=`${allClasses.length > 0 ?`${allClasses} `: `` }site-list`)
     each menuItem in mainMenu
       +site-list-item(selectedID, menuItem, 1)
         if (typeof (menuItem.childs) !== 'undefined' && menuItem.childs)
@@ -28,7 +37,7 @@ mixin site-list-item(selectedID, item, level)
   -
     let thisItemClass = 'site-list__item';
     let thisLinkClass = 'site-list__link';
-    if (selectedID == item.id) {
+    if (selectedID === item.id) {
       thisItemClass += '  site-list__item--active';
     }
     if (item.childs) {
