--- a/src/blocks/site-list/site-list.data.pug
+++ b/src/blocks/site-list/site-list.data.pug
@@ -2,51 +2,22 @@
   var mainMenu = [
     {
       "id": "0",
-      "name": "Главная страница",
+      "name": "История",
       "url": "/"
     },
     {
       "id": "10",
-      "name": "Страницы",
-      "url": "/pages",
-      "childs": [
-        {
-          "id": "10-0",
-          "name": "О компании",
-          "url": "pages/about"
-        },
-        {
-          "id": "10-10",
-          "name": "Услуги",
-          "url": "pages/services",
-          "childs": [
-            {
-              "id": "10-10-0",
-              "name": "Вёрстка",
-              "url": "pages/services/serve"
-            },
-            {
-              "id": "10-10-10",
-              "name": "Стриптиз",
-              "url": "pages/services/strip"
-            }
-          ]
-        },
-        {
-          "id": "10-20",
-          "name": "Ещё одна страница",
-          "url": "pages/some"
-        },
-      ]
+      "name": "Производство",
+      "url": "/",
     },
     {
       "id": "20",
-      "name": "Репозиторий",
-      "url": "https://github.com/nicothin/NTH-start-project"
+      "name": "Ассортимент",
+      "url": "/"
     },
     {
       "id": "30",
-      "name": "Контакты автора",
-      "url": "https://nicothin.pro/contact"
+      "name": "Где купить",
+      "url": "/"
     },
   ];
