включил минификацию html, минификацию criticalcss, понизил качество картинок, добавил новую фавиконку, создал scss анимаций, убрал ie11 из автопрефиксера

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -6,8 +6,10 @@ block meta
 
 //- block append head
 //-   link(rel='stylesheet', href='css/some.css')
+  link(rel='preload', href='fonts/Poppins-Medium.woff2', as='font', crossorigin='anonymous')
+    link(rel='preload', href='fonts/Poppins-Regular.woff2', as='font', crossorigin='anonymous')
 
-block nav
+block header
   p.nothing test
 
 block content
