--- a/src/pages/404.pug
+++ b/src/pages/404.pug
@@ -6,8 +6,7 @@ block meta
 
 //- block append head
 //-   link(rel='stylesheet', href='css/some.css')
-block nav
-
+block header
 
 block content
   h1 Error 404
