--- a/src/pug/layout.pug
+++ b/src/pug/layout.pug
@@ -12,23 +12,14 @@ html(class='no-js', lang='ru')
     meta(name='format-detection', content='address=no')
     meta(name='format-detection', content='email=no')
     meta(content='notranslate', name='google')
-    //- Фавиконки (https://realfavicongenerator.net)
-    //- link(rel='apple-touch-icon', sizes='180x180', href='/img/favicon/apple-touch-icon.png')
-    //- link(rel='icon', type='image/png', sizes='16x16', href='/img/favicon/favicon-16x16.png')
-    //- link(rel='icon', type='image/png', sizes='32x32', href='/img/favicon/favicon-32x32.png')
-    //- link(rel='manifest', href='/img/favicon/site.webmanifest')
-    //- link(rel='mask-icon', href='/img/favicon/safari-pinned-tab.svg', color='#5bbad5')
-    //- meta(name='msapplication-TileColor', content='#5bbad5')
-    //- meta(name='theme-color', content='#000')
-    //- meta(name='msapplication-navbutton-color', content='#000')
-    //- meta(name='apple-mobile-web-app-status-bar-style', content='#000')
+    meta(name='robots', content='index,follow')
+    link(rel='icon', href='favicon.svg')
 
     block meta
 
     block head
+      link(rel='preload', href='css/style.css', as='style')
       link(rel='stylesheet', href='css/style.css')
-      script
-        include ../js/head-script.js
       script(src='js/bundle.js', defer)
 
   body.webp
@@ -40,4 +31,3 @@ html(class='no-js', lang='ru')
       block footer
 
     block page-bottom
-
