create range-field, refresh createBlock.js

--- a/src/blocks/copyright/copyright.pug
+++ b/src/blocks/copyright/copyright.pug
@@ -20,6 +20,6 @@ mixin copyright(classes)
     a.copyright__link(href='/', target='_blank', rel='noopener noreferrer')
       picture
         source(type='image/webp', srcset='/')
-        img.copyright__img.lazyload(data-src='/', width='/', height='/', alt='/', loading='lazy')
+        img.copyright__img.lazyload(src='/', width='/', height='/', alt='/', loading='lazy')
     b.copyright__text
     span.copyright__company
